修改修改product頁面圖片

--- a/app/assets/style/_index.scss
+++ b/app/assets/style/_index.scss
@@ -141,7 +141,7 @@ main {
                 }
 
                 p {
-                    font-size: 48px;
+                    font-style: italic;                    font-size: 48px;
                     color: #AA0601;
                     font-weight: 700;
                 }
@@ -225,6 +225,7 @@ main {
                 }
 
                 p {
+                    font-style: italic;
                     color: #AA0601;
                     background: #fff;
                     font-size: 48px;
