--- a/app/layout-blog.ejs
+++ b/app/layout-blog.ejs
@@ -47,11 +47,21 @@
     </header>
 
 
-    <ul class="product-nav container">
-        <li><a href="product.html">OPTICAL</a></li>
-        <li><a href="product2.html">SUNGLASSES</a></li>
-        <li><a href="#">FUNCTIONAL</a></li>
-    </ul>
+    <div class="blog-menu">
+        <div class="container">
+            <div class="blog-navbar">
+                <ul>
+                    <li><a href="#">最新消息</a></li>
+                    <li><a href="#">特別企劃</a></li>
+                    <li><a href="#">新品上市</a></li>
+                    <li><a href="#">鏡框小知識</a></li>
+                </ul>
+                <a href="#"><span class="material-symbols-outlined">
+                        search
+                    </span></a>
+            </div>
+        </div>
+    </div>
 
 
 
