--- a/app/assets/style/_commonArea.scss
+++ b/app/assets/style/_commonArea.scss
@@ -46,8 +46,17 @@ header {
             a {
                 color: #fff;
 
-                &:hover {
-                    text-decoration: underline;
+                &::after{
+                    content: "";
+                    display: block;
+                    width: 0%;
+                    height: 2px;
+                    background: #fff;
+                    transition: .4s, .2s;
+                }
+
+                &:hover::after {
+                    width: 100%;
                 }
             }
         }
@@ -164,7 +173,36 @@ header {
 
 
 
+.blog-menu {
+    background: #650300;
 
+    .blog-navbar {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 13px 0;
+
+        ul {
+            display: flex;
+            gap: 48px;
+
+            a {
+                color: #fff;
+            }
+        }
+
+        span {
+            color: #fff;
+            font-size: 40px;
+        }
+    }
+}
+
+@media (max-width:576px){
+    .blog-menu{
+        display: none;
+    }
+}
 
 
 
