--- a/app/layout.ejs
+++ b/app/layout.ejs
@@ -20,9 +20,9 @@
         <h1><a href="index.html"><img src="./assets/images/logo-white.png" alt=""></a></h1>
         <ul class="navbar">
           <li><a href="product.html">系列鏡框</a></li>
-          <li><a href="">門市據點</a></li>
-          <li><a href="">部落格</a></li>
-          <li><a href="">常見問題</a></li>
+          <li><a href="location.html">門市據點</a></li>
+          <li><a href="blog.html">部落格</a></li>
+          <li><a href="question.html">常見問題</a></li>
         </ul>
 
         <a class="mobile-menu" href="#">
@@ -33,10 +33,10 @@
       </div>
       <div class="mobile-show">
         <ul class="mobile-navbar">
-          <li><a href="">系列鏡框</a></li>
-          <li><a href="">門市據點</a></li>
-          <li><a href="">部落格</a></li>
-          <li><a href="">常見問題</a></li>
+          <li><a href="product.html">系列鏡框</a></li>
+          <li><a href="location.html">門市據點</a></li>
+          <li><a href="blog.html">部落格</a></li>
+          <li><a href="question.html">常見問題</a></li>
         </ul>
       </div>
 
@@ -55,9 +55,9 @@
             <ul class="footer-link">
               <li><a href="index.html">首頁</a></li>
               <li><a href="product.html">系列鏡框</a></li>
-              <li><a href="">門市據點</a></li>
-              <li><a href="">部落格</a></li>
-              <li><a href="">常見問題</a></li>
+              <li><a href="location.html">門市據點</a></li>
+              <li><a href="blog.html">部落格</a></li>
+              <li><a href="question.html">常見問題</a></li>
             </ul>
             <ul class="footer-contract">
               <li>
