--- a/app/assets/style/_blog.scss
+++ b/app/assets/style/_blog.scss
@@ -10,6 +10,9 @@
 
         .blog-img {
             width: 50%;
+            &:hover{
+                opacity: 0.8;
+            }
         }
 
         .blog-content {
