--- a/app/assets/style/_commonArea.scss
+++ b/app/assets/style/_commonArea.scss
@@ -5,14 +5,14 @@
 
 
     @media (max-width: 768px) {
-
+        max-width: 720px;
         padding: 0 36px;
 
 
     }
 
     @media (max-width: 375px) {
-
+        max-width: 100%;
         padding: 0 13px;
 
     }
@@ -46,7 +46,7 @@ header {
             a {
                 color: #fff;
 
-                &::after{
+                &::after {
                     content: "";
                     display: block;
                     width: 0%;
@@ -198,8 +198,8 @@ header {
     }
 }
 
-@media (max-width:576px){
-    .blog-menu{
+@media (max-width:576px) {
+    .blog-menu {
         display: none;
     }
 }
@@ -234,6 +234,13 @@ footer {
             display: flex;
             gap: 48px;
             margin-bottom: 36px;
+
+            a {
+                &:hover {
+                    text-decoration: underline;
+                }
+            }
+
         }
 
 
@@ -286,6 +293,11 @@ footer {
             display: flex;
             gap: 48px;
             font-size: 14px;
+            a{
+                &:hover{
+                    text-decoration: underline;
+                }
+            }
         }
     }
 
