--- a/app/assets/style/_index.scss
+++ b/app/assets/style/_index.scss
@@ -23,6 +23,9 @@
             font-size: 20px;
             background: #AA0601;
             padding: 6px 12px;
+            &:hover{
+                text-decoration: underline;
+            }
         }
     }
 }
