--- a/app/assets/style/_location.scss
+++ b/app/assets/style/_location.scss
@@ -94,6 +94,9 @@
             padding: 16px 0;
             color: #fff;
             background: #000;
+            &:hover{
+                text-decoration: underline;
+            }
         }
     }
 
