--- a/app/assets/style/_product.scss
+++ b/app/assets/style/_product.scss
@@ -60,6 +60,12 @@ main {
                 width: 23%;
                 margin-bottom: 80px;
 
+                img{
+                    &:hover{
+                        opacity: 0.5;
+                    }
+                }
+
                 .product-text {
                     display: flex;
                     justify-content: space-between;
