--- a/app/assets/style/_commonArea.scss
+++ b/app/assets/style/_commonArea.scss
@@ -28,7 +28,6 @@ header {
     background: #AA0601;
 
     .header-content {
-
         display: flex;
         justify-content: space-between;
         align-items: center;
@@ -44,6 +43,7 @@ header {
             gap: 64px;
 
             a {
+                display: block;
                 color: #fff;
 
                 &::after {
@@ -73,49 +73,40 @@ header {
 
     }
 
-    .mobile-show {
-        display: none;
-
-        .mobile-navbar {
-            display: flex;
-            justify-content: space-between;
-            flex-wrap: wrap;
-            text-align: center;
-            gap: 10px;
-            border-top: 1px solid #fff;
-            padding: 20px 0;
-
-            a {
-                color: #fff;
-
-                &:hover {
-                    text-decoration: underline;
-                }
-            }
-        }
-    }
+  
 
     @media (max-width: 640px) {
         .header-content {
-            .navbar {
-                display: none;
+            position: relative;
+            .navbar{
+                position: absolute;
+                display: block;
+                text-align: center;
+                background: #AA0601;
+                top: 100%;
+                width: 100%;
+                max-height: 0px;
+                overflow: hidden;
+                transition: all 1s;
+               
+                a{
+                    padding: 16px;
+                    border-top: 1px solid #fff;
+                    &::after{
+                        content: none;
+                    }
+                    &:hover{
+                        background: #650300;
+                    }
+                }
             }
-
             .mobile-menu {
                 display: block;
             }
+            .open.navbar{
+                max-height: 250px;
+            }
 
-        }
-
-        .mobile-show {
-            display: block;
-            max-height: 0;
-            overflow: hidden;
-        }
-
-        .open.mobile-show {
-            max-height: 100px;
-            transition: 1.5s;
         }
     }
 
