--- a/app/assets/style/_commonArea.scss
+++ b/app/assets/style/_commonArea.scss
@@ -32,10 +32,17 @@ header {
         justify-content: space-between;
         align-items: center;
 
-        img {
-            width: 80px;
-            height: 72px;
-            object-fit: contain;
+        h1{
+            a{
+                background: url(../images/logo-white.png) no-repeat center;
+                background-size: contain;
+                width: 80px;
+                height: 72px;
+                display: block;
+                text-indent: 101%;
+                overflow: hidden;
+                white-space: nowrap;
+            }
         }
 
         .navbar {
@@ -43,21 +50,7 @@ header {
             gap: 64px;
 
             a {
-                display: block;
-                color: #fff;
-
-                &::after {
-                    content: "";
-                    display: block;
-                    width: 0%;
-                    height: 2px;
-                    background: #fff;
-                    transition: .4s, .2s;
-                }
-
-                &:hover::after {
-                    width: 100%;
-                }
+                @include underline()
             }
         }
 
@@ -73,12 +66,13 @@ header {
 
     }
 
-  
+
 
     @media (max-width: 640px) {
         .header-content {
             position: relative;
-            .navbar{
+
+            .navbar {
                 position: absolute;
                 display: block;
                 text-align: center;
@@ -88,22 +82,26 @@ header {
                 max-height: 0px;
                 overflow: hidden;
                 transition: all 1s;
-               
-                a{
+
+                a {
                     padding: 16px;
                     border-top: 1px solid #fff;
-                    &::after{
+
+                    &::after {
                         content: none;
                     }
-                    &:hover{
+
+                    &:hover {
                         background: #650300;
                     }
                 }
             }
+
             .mobile-menu {
                 display: block;
             }
-            .open.navbar{
+
+            .open.navbar {
                 max-height: 250px;
             }
 
@@ -227,9 +225,7 @@ footer {
             margin-bottom: 36px;
 
             a {
-                &:hover {
-                    text-decoration: underline;
-                }
+                @include underline()
             }
 
         }
@@ -264,7 +260,12 @@ footer {
             img {
                 width: 48px;
                 height: 48px;
+                opacity: 1;
+                &:hover{
+                    opacity: 0.5;
+                }
             }
+            
         }
 
 
@@ -284,8 +285,9 @@ footer {
             display: flex;
             gap: 48px;
             font-size: 14px;
-            a{
-                &:hover{
+
+            a {
+                &:hover {
                     text-decoration: underline;
                 }
             }
