--- a/app/assets/style/_index.scss
+++ b/app/assets/style/_index.scss
@@ -2,10 +2,14 @@
     height: 787px;
     background: url("../images/home-header.png") no-repeat center;
     background-size: cover;
+    display: flex;
+    align-items: center;
+    .container{
+        width: 100%;
+    }
 
     .banner-text {
         text-align: right;
-        padding: 296px 0;
         color: #650300;
 
         P {
@@ -143,7 +147,7 @@ main {
                     margin-bottom: 8px;
                 }
 
-                p {
+                h4 {
                     font-style: italic;                    font-size: 48px;
                     color: #AA0601;
                     font-weight: 700;
@@ -227,7 +231,7 @@ main {
                     background-size: cover;
                 }
 
-                p {
+                h4 {
                     font-style: italic;
                     color: #AA0601;
                     background: #fff;
@@ -350,6 +354,8 @@ main {
             input {
                 margin-bottom: 16px;
                 padding: 6px 12px;
+                background: transparent;
+                border: 1px solid #650300;
             }
 
             textarea {
@@ -357,6 +363,8 @@ main {
                 resize: none;
                 height: 136px;
                 margin-bottom: 16px;
+                background: transparent;
+                border: 1px solid #650300;
             }
 
             .check {
@@ -371,6 +379,10 @@ main {
                 font-weight: 700;
                 border: none;
                 padding: 16px 0;
+                cursor: pointer;
+                &:hover{
+                    background: #650300;
+                }
             }
         }
     }
