--- a/app/assets/style/_product2.scss
+++ b/app/assets/style/_product2.scss
@@ -20,15 +20,11 @@ main {
     @media (max-width: 768px) {
         .product2-bg {
             .bg-left {
-                height: 296px;
-                background: url("../images/product-header-sm-3.png") no-repeat center;
-                background-size: cover;
+                background-image: url("../images/product-header-sm-3.png");
             }
 
             .bg-right {
-                height: 296px;
-                background: url("../images/product-header-sm-4.png") no-repeat center;
-                background-size: cover;
+                background-image: url("../images/product-header-sm-4.png");
             }
         }
 
