--- a/app/assets/style/all.scss
+++ b/app/assets/style/all.scss
@@ -1,5 +1,6 @@
 @import "reset";
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;500;700;900&family=Roboto:ital,wght@0,400;0,500;1,700&display=swap');@import "fontSet";
+@import 'mixin';
 @import "commonArea";
 @import "index";
 @import "product";
