--- a/app/layout-product.ejs
+++ b/app/layout-product.ejs
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="shortcut icon" href="./assets/images/favicon.ico" />
+
     <title>
         <%- title %>
     </title>
@@ -17,7 +19,7 @@
     <header class="header">
         <div class="container">
           <div class="header-content">
-            <h1><a href="index.html"><img src="./assets/images/logo-white.png" alt=""></a></h1>
+            <h1><a href="index.html">logo</a></h1>
             <ul class="navbar">
               <li><a href="product.html">系列鏡框</a></li>
               <li><a href="location.html">門市據點</a></li>
